--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,1 +1,1 @@
-<script src="https://cdn.usefathom.com/script.js" data-site="UNVOWGIF" defer></script>
+<script src="https://aardwolf.relaycorp.tech/script.js" data-site="UNVOWGIF" defer></script>
