--- a/_includes/footer_custom.html
+++ b/_includes/footer_custom.html
@@ -1,3 +1,3 @@
 <p class="text-center fs-3">
-    Copyright 2022 by <a href="https://relaycorp.tech">Relaycorp</a>.
+    Copyright 2022-2023 by <a href="https://relaycorp.tech">Relaycorp</a>.
 </p>
