Add Footer and TopNav components with responsive design

--- a/src/layouts/Skeleton.astro
+++ b/src/layouts/Skeleton.astro
@@ -33,9 +33,9 @@ const { title, description } = Astro.props;
 </html>
 
 <style is:global>
-@font-face {
-    font-family: 'JetBrainsMono';
-    src: url('/fonts/JetBrainsMono-Regular.woff2') format('woff2');
+  @font-face {
+    font-family: "JetBrainsMono";
+    src: url("/fonts/JetBrainsMono-Regular.woff2") format("woff2");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -46,9 +46,14 @@ const { title, description } = Astro.props;
     overflow-x: hidden;
     width: 100%;
     color: #d4d4d4;
-    font-family: 'JetBrainsMono';
+    font-family: "JetBrainsMono";
   }
-  h1, h2, h3, h4, h5, h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     color: #ffffff;
   }
 </style>
