--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,13 +3,13 @@ import { Image } from "astro:assets";
 import VeraIdLogo from "../assets/veraid-logo-dark.png";
 ---
 
-<footer class="py-16 max-w-7xl mx-auto text-sm">
-  <div class="container mx-auto px-6">
+<footer class="py-16 mx-auto text-sm bg-neutral-950">
+  <div class="max-w-7xl mx-auto px-6">
     <div class="grid grid-cols-1 md:grid-cols-[1fr_auto_auto] gap-8 md:gap-24">
       <div class="space-y-4">
         <Image src={VeraIdLogo} alt="VeraId Logo" class="h-8 w-auto" />
         <p class="text-sm">User-and developer-friendly authentication based on DNS.</p>
-        <div class="flex gap-4 [&>a]:text-gray-400 [&>a]:hover:text-white">
+        <div class="flex gap-4 [&>a]:text-neutral-400 [&>a]:hover:text-neutral-300">
           <a href="https://x.com/CheVeraId">
             <svg class="h-6 w-6" viewBox="0 0 24 24" fill="currentColor">
               <path
@@ -34,7 +34,7 @@ import VeraIdLogo from "../assets/veraid-logo-dark.png";
         </div>
       </div>
 
-      <div class="space-y-4 [&>ul>li>a]:text-gray-300 [&>ul>li>a]:hover:text-white">
+      <div class="space-y-4 [&>ul>li>a]:text-neutral-400 [&>ul>li>a]:hover:text-neutral-300">
         <h3>VERAID</h3>
         <ul class="space-y-4">
           <li><a href="/prior-art">Prior art</a></li>
@@ -45,7 +45,7 @@ import VeraIdLogo from "../assets/veraid-logo-dark.png";
         </ul>
       </div>
 
-      <div class="space-y-4 [&>ul>li>a]:text-gray-300 [&>ul>li>a]:hover:text-white">
+      <div class="space-y-4 [&>ul>li>a]:text-neutral-400 [&>ul>li>a]:hover:text-neutral-300">
         <h3>RELAYCORP</h3>
         <ul class="space-y-4">
           <li><a href="https://relaycorp.tech/">Contact us</a></li>
