--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,11 @@ import Layout from "../layouts/Skeleton.astro";
 ---
 
 <Layout title="Home" description="Home page">
-    <h1 class="text-4xl font-bold text-center">Home</h1>
+  <div class="px-6 py-16 space-y-8">
+  <h1 class="text-5xl font-bold text-center">Homepage</h1>
+  <p class="text-center">
+      Welcome to the homepage of the VeraId project. This is a project that is
+      currently in development.
+    </p>
+  </div>
 </Layout>
