--- a/src/components/TopNav.astro
+++ b/src/components/TopNav.astro
@@ -21,10 +21,31 @@ const navLinks = [
   </div>
 
   <!-- Mobile menu toggle button -->
-  <button id="menu-button" class="text-white cursor-pointer md:hidden" aria-label="Toggle menu">
-    <div class="menu-icon w-6 h-6" set:html={MenuIcon} />
-    <div class="close-icon hidden w-6 h-6" set:html={CloseIcon} />
-  </button>
+  <div class="md:hidden">
+    <details>
+      <summary class="text-white cursor-pointer list-none [&>div]:w-6 [&>div]:h-6">
+        <div class="[details[open]_&]:hidden" set:html={MenuIcon} />
+        <div class="hidden [details[open]_&]:block" set:html={CloseIcon} />
+      </summary>
+
+      <ul
+        class="absolute top-20 left-0 pl-6 w-full bg-black flex-col items-center space-y-6 text-white py-6"
+      >
+        {
+          navLinks.map(({ href, text }) => (
+            <li>
+              <a
+                href={href}
+                class:list={["hover:text-green-200", { "text-green-300": pathname === href }]}
+              >
+                {text}
+              </a>
+            </li>
+          ))
+        }
+      </ul>
+    </details>
+  </div>
 
   <!-- Desktop navigation -->
   <ul class="hidden md:flex space-x-12 text-white">
@@ -41,37 +62,4 @@ const navLinks = [
       ))
     }
   </ul>
-
-  <!-- Mobile navigation -->
-  <ul
-    class="absolute top-20 left-0 pl-6 w-full bg-black flex-col items-center space-y-6 text-white py-6 hidden"
-    id="mobile-nav-links"
-  >
-    {
-      navLinks.map(({ href, text }) => (
-        <li>
-          <a
-            href={href}
-            class:list={["hover:text-green-200", { "text-green-300": pathname === href }]}
-          >
-            {text}
-          </a>
-        </li>
-      ))
-    }
-  </ul>
 </nav>
-
-<script>
-  document.getElementById("menu-button")?.addEventListener("click", function () {
-    const mobileMenu = document.getElementById("mobile-nav-links");
-    const menuIcon = this?.querySelector(".menu-icon");
-    const closeIcon = this?.querySelector(".close-icon");
-
-    if (mobileMenu && menuIcon && closeIcon) {
-      mobileMenu.classList.toggle("hidden");
-      menuIcon.classList.toggle("hidden");
-      closeIcon.classList.toggle("hidden");
-    }
-  });
-</script>
