--- a/src/layouts/Skeleton.astro
+++ b/src/layouts/Skeleton.astro
@@ -19,9 +19,9 @@ const IS_PRODUCTION = import.meta.env.PROD;
     <meta name="viewport" content="width=device-width" />
 
     <!-- Favicon -->
+    <link rel="shorticon" type="image/svg+xml" href="/favicon/favicon.svg" />
     <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link rel="icon" href="/favicon/favicon.ico" sizes="any" />
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
     <link rel="manifest" href="/favicon/site.webmanifest" />
 
