Simplify page title generation in Skeleton layout

--- a/src/layouts/Skeleton.astro
+++ b/src/layouts/Skeleton.astro
@@ -34,7 +34,7 @@ const pageTitle = `${title} | VeraId`;
       rel="stylesheet"
     />
 
-    <title>{pageTitle}</title>
+    <title>{`${title} | VeraId`}</title>
 
     {
       IS_PRODUCTION && (
