--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,8 @@
 ---
 import Layout from "../layouts/Skeleton.astro";
+import Hero from "../components/Homepage/Hero.astro";
 ---
 
 <Layout title="Home" description="Home page">
-  <div class="px-6 py-16 space-y-8">
-    <h1 class="text-5xl font-bold text-center">Homepage</h1>
-    <p class="text-center">
-      Welcome to the homepage of the VeraId project. This is a project that is currently in
-      development.
-    </p>
-  </div>
+<Hero />
 </Layout>
