Update homepage metadata with descriptive title and description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,6 @@ import Layout from "../layouts/Skeleton.astro";
 import Hero from "../components/Homepage/Hero.astro";
 ---
 
-<Layout title="Home" description="Home page">
+<Layout title="VeraId | DNS-based authentication, with or without the Internet" description="VeraId is a decentralised protocol to securely attribute content to domain names - without the Internet or passwords.">
 <Hero />
 </Layout>
