--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import UseCases from "../components/Homepage/UseCases.astro";
 import About from "../components/Homepage/About.astro";
 import Founder from "../components/Homepage/Founder.astro";
 import HowItWorks from "../components/Homepage/HowItWorks.astro";
+import Benefits from "../components/Homepage/Benefits.astro";
 ---
 
 <Layout
@@ -14,6 +15,7 @@ import HowItWorks from "../components/Homepage/HowItWorks.astro";
   <Hero />
   <UseCases />
   <HowItWorks />
+  <Benefits />
   <Founder />
   <About />
 </Layout>
