Refactor homepage components and styling

--- a/src/layouts/Skeleton.astro
+++ b/src/layouts/Skeleton.astro
@@ -63,6 +63,7 @@ const IS_PRODUCTION = import.meta.env.PROD;
     width: 100%;
     color: #d4d4d4;
     font-family: "JetBrainsMono";
+    font-size: 20px;
   }
   h1,
   h2,
@@ -73,5 +74,12 @@ const IS_PRODUCTION = import.meta.env.PROD;
     color: #ffffff;
     font-family: "Chakra Petch", sans-serif;
     font-weight: 700;
+  }
+  p a {
+    color: #7af2a8;
+  }
+  p a:hover {
+    color: #b9f7cf;
+    text-decoration: underline;
   }
 </style>
