--- a/src/components/Homepage/Founder.astro
+++ b/src/components/Homepage/Founder.astro
@@ -4,7 +4,7 @@ import founderPortrait from "../../assets/founder-portrait.png";
 ---
 
 <section class="px-6 py-16 bg-neutral-900">
-  <div class="max-w-7xl mx-auto">
+  <div class="max-w-6xl mx-auto">
     <h2 class="text-6xl font-bold text-center mb-8">Founder's note</h2>
 
     <div class="flex flex-col md:flex-row gap-16 items-center">
@@ -12,7 +12,7 @@ import founderPortrait from "../../assets/founder-portrait.png";
         <Image src={founderPortrait} alt="" class="w-full h-full object-cover" />
       </div>
 
-      <div class="space-y-4 text-gray-300">
+      <div class="space-y-4">
         <p class="text-2xl">
           I designed VeraId to provide users of Letro, a secure alternative to email, with
           offline-compatible user identifiers robust enough to withstand attacks by nation-state
@@ -23,8 +23,7 @@ import founderPortrait from "../../assets/founder-portrait.png";
           VeraId evolved into its own project as its potential became clear. Its capacity for
           attributing content to user-friendly, customisable, decentralised user identifiers can
           enhance existing systems and pave the way for a new generation of decentralised apps like <a
-            href="https://letro.io"
-            class="text-green-400">Letro</a
+            href="https://letro.app/en/">Letro</a
           >.
         </p>
 
