--- a/src/components/Homepage/Hero.astro
+++ b/src/components/Homepage/Hero.astro
@@ -1,12 +1,15 @@
-<section class="px-6 py-16">
-  <div class="max-w-7xl mx-auto text-center">
+<section class="relative px-6 pt-16 pb-20">
+  <div class="absolute inset-0 w-full h-full">
+    <img src="/src/assets/pattern.svg" alt="" class="w-full h-full object-cover opacity-40" />
+  </div>
+  <div class="relative max-w-7xl mx-auto text-center">
     <h1 class="text-[5em] font-bold mb-8 leading-tight">
-      <span class="text-green-400">User- and developer-friendly</span>
+      <span class="bg-gradient-to-b from-green-500 via-green-400 to-green-300 text-transparent bg-clip-text">User- and developer-friendly</span>
       <br />
       authentication based on DNS
     </h1>
     <p class="text-xl text-neutral-300 mx-auto max-w-4xl">
-      The decentralised protocol to securely attribute content to domain names – without the
+      The decentralised protocol to securely attribute content to domain names — without the
       Internet or passwords.
     </p>
   </div>
