--- a/src/components/TopNav.astro
+++ b/src/components/TopNav.astro
@@ -12,15 +12,31 @@ const navLinks = [
   { href: "/prior-art", text: "Prior art" },
 ];
 ---
-
-<nav class="max-w-7xl mx-auto px-6 py-8 flex justify-between items-center">
-  <div>
-    <a href="/">
-      <Image src={logoDark} alt="VeraId logo" width={100} height={100} />
-    </a>
-  </div>
-
-  <!-- Mobile menu toggle button -->
+<nav class=" border-b border-neutral-800">
+  <div class="px-6 py-4 flex max-w-6xl mx-auto justify-between items-center">
+  <!-- Logo -->
+  <a href="/">
+    <Image src={logoDark} alt="VeraId logo" width={120} height={120} />
+  </a>
+  <!-- Desktop navigation links -->
+  <ul class="hidden md:flex space-x-12 text-white text-sm">
+    {
+      navLinks.map(({ href, text }) => (
+        <li>
+          <a
+            href={href}
+            class:list={[
+              "hover:text-green-200",
+              { "text-green-300": pathname.replace(/\/$/, "") === href },
+            ]}
+          >
+            {text}
+          </a>
+        </li>
+      ))
+    }
+  </ul>
+  <!-- Mobile menu -->
   <div class="md:hidden">
     <details>
       <summary class="text-white cursor-pointer list-none [&>div]:w-6 [&>div]:h-6">
@@ -49,23 +65,5 @@ const navLinks = [
       </ul>
     </details>
   </div>
-
-  <!-- Desktop navigation -->
-  <ul class="hidden md:flex space-x-12 text-white">
-    {
-      navLinks.map(({ href, text }) => (
-        <li>
-          <a
-            href={href}
-            class:list={[
-              "hover:text-green-200",
-              { "text-green-300": pathname.replace(/\/$/, "") === href },
-            ]}
-          >
-            {text}
-          </a>
-        </li>
-      ))
-    }
-  </ul>
+  </div>
 </nav>
