Adjust layout and styling for Footer, TopNav, About, and Hero components

--- a/src/components/TopNav.astro
+++ b/src/components/TopNav.astro
@@ -45,7 +45,7 @@ const navLinks = [
       </summary>
 
       <ul
-        class="absolute top-20 left-0 pl-6 w-full bg-black flex-col items-center space-y-6 text-white py-6"
+        class="absolute top-20 left-0 pl-6 w-full bg-black flex-col items-center space-y-6 text-white py-6 z-50"
       >
         {
           navLinks.map(({ href, text }) => (
