--- a/src/components/Homepage/About.astro
+++ b/src/components/Homepage/About.astro
@@ -1,4 +1,5 @@
-<section class="max-w-6xl mx-auto px-6 py-16">
+<section class="px-6 py-16 bg-neutral-950">
+  <div class="max-w-6xl mx-auto">
   <h2 class="text-6xl font-bold text-center mb-8">About</h2>
 
   <div class="space-y-6">
@@ -22,5 +23,6 @@
       The word vera is <a href="https://en.wikipedia.org/wiki/Vera">Ido</a> for authentic, and it's pronounced
       VEH-rah (with a trilled R).
     </p>
+  </div>
   </div>
 </section>
