--- a/src/components/Homepage/Hero.astro
+++ b/src/components/Homepage/Hero.astro
@@ -1,14 +1,14 @@
-<section class="relative px-6 pt-16 pb-20">
+<section class="relative px-6 sm:pt-16 pt-8 md:pb-20 pb-12">
   <div class="absolute inset-0 w-full h-full">
-    <img src="/src/assets/pattern.svg" alt="" class="w-full h-full object-cover opacity-40" />
+    <img src="/src/assets/pattern.svg" alt="" class="w-full h-full object-cover opacity-50" />
   </div>
   <div class="relative max-w-6xl mx-auto text-center">
-    <h1 class="text-[5em] font-bold mb-8 leading-tight">
+    <h1 class="text-2xl sm:text-5xl md:text-7xl font-bold md:mb-8 mb-4 leading-tight">
       <span class="bg-gradient-to-b from-green-500 via-green-400 to-green-300 text-transparent bg-clip-text">User- and developer-friendly</span>
       <br />
       authentication based on DNS
     </h1>
-    <p class="text-xl text-neutral-300 mx-auto max-w-4xl">
+    <p class="text-md sm:text-xl md:text-2xl text-neutral-300 mx-auto max-w-4xl">
       The decentralised protocol to securely attribute content to domain names — without the
       Internet or passwords.
     </p>
