--- a/src/components/Homepage/UseCases.astro
+++ b/src/components/Homepage/UseCases.astro
@@ -1,7 +1,7 @@
-<section class="px-6 py-16 bg-neutral-950">
+<section class="px-6 sm:py-10 py-8 md:py-16 bg-neutral-950">
   <div class="max-w-6xl mx-auto">
-    <h2 class="text-6xl font-semibold text-center mb-12">Use cases</h2>
-    <div class="grid md:grid-cols-2 gap-16">
+    <h2 class="text-2xl sm:text-4xl md:text-6xl font-semibold text-center mb-12">Use cases</h2>
+    <div class="grid md:grid-cols-2 gap-16 [&>div>h3]:text-lg [&>div>h3]:sm:text-xl [&>div>h3]:md:text-3xl [&>div>h3]:font-semibold [&>div>h3]:mt-4">
       <div class="space-y-2">
         <div class="w-12 h-12 bg-green-400 rounded-full flex items-center justify-center">
           <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor">
@@ -10,7 +10,7 @@
             ></path>
           </svg>
         </div>
-        <h3 class="text-2xl font-bold mt-4">API Authentication</h3>
+        <h3>API Authentication</h3>
         <p class="text-gray-300">
           For example, authenticating API clients without bearer tokens or pre-shared public keys.
         </p>
@@ -24,7 +24,7 @@
             ></path>
           </svg>
         </div>
-        <h3 class="text-2xl font-semibold mt-4">Documenting and app signing</h3>
+        <h3>Documenting and app signing</h3>
         <p class="text-gray-300">For example, signing a PDF on behalf of "bbc.com".</p>
       </div>
 
@@ -36,7 +36,7 @@
             ></path>
           </svg>
         </div>
-        <h3 class="text-2xl font-semibold mt-4">Offline user authentication</h3>
+        <h3>Offline user authentication</h3>
         <p class="text-gray-300">
           For example, allow users of decentralised communications apps to have their own
           identifiers.
@@ -51,7 +51,7 @@
             ></path>
           </svg>
         </div>
-        <h3 class="text-2xl font-semibold mt-4">Next-gen decentralised systems</h3>
+        <h3>Next-gen decentralised systems</h3>
         <p class="text-gray-300">
           For example, peer-to-peer web hosting with contents reliably attributed to their
           respective domain names.
