--- a/src/components/Homepage/UseCases.astro
+++ b/src/components/Homepage/UseCases.astro
@@ -1,15 +1,13 @@
+---
+import { Image } from "astro:assets";
+import apiAuthentication from "../../assets/authentication.png";
+---
 <section class="px-6 sm:py-10 py-8 md:py-16 bg-neutral-950">
   <div class="max-w-6xl mx-auto">
     <h2 class="text-2xl sm:text-4xl md:text-6xl font-semibold text-center mb-12">Use cases</h2>
     <div class="grid md:grid-cols-2 gap-16 [&>div>h3]:text-lg [&>div>h3]:sm:text-xl [&>div>h3]:md:text-3xl [&>div>h3]:font-semibold [&>div>h3]:mt-4">
       <div class="space-y-2">
-        <div class="w-12 h-12 bg-green-400 rounded-full flex items-center justify-center">
-          <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor">
-            <path
-              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
-            ></path>
-          </svg>
-        </div>
+        <Image src={apiAuthentication} alt="API Authentication icon" class="w-12 h-12" />
         <h3>API Authentication</h3>
         <p class="text-gray-300">
           For example, authenticating API clients without bearer tokens or pre-shared public keys.
@@ -17,25 +15,13 @@
       </div>
 
       <div class="space-y-2">
-        <div class="w-12 h-12 bg-green-400 rounded-full flex items-center justify-center">
-          <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor">
-            <path
-              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
-            ></path>
-          </svg>
-        </div>
+        <Image src={apiAuthentication} alt="API Authentication icon" class="w-12 h-12" />
         <h3>Documenting and app signing</h3>
         <p class="text-gray-300">For example, signing a PDF on behalf of "bbc.com".</p>
       </div>
 
       <div class="space-y-2">
-        <div class="w-12 h-12 bg-green-400 rounded-full flex items-center justify-center">
-          <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor">
-            <path
-              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
-            ></path>
-          </svg>
-        </div>
+        <Image src={apiAuthentication} alt="API Authentication icon" class="w-12 h-12" />
         <h3>Offline user authentication</h3>
         <p class="text-gray-300">
           For example, allow users of decentralised communications apps to have their own
@@ -44,13 +30,7 @@
       </div>
 
       <div class="space-y-2">
-        <div class="w-12 h-12 bg-green-400 rounded-full flex items-center justify-center">
-          <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor">
-            <path
-              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
-            ></path>
-          </svg>
-        </div>
+        <Image src={apiAuthentication} alt="API Authentication icon" class="w-12 h-12" />
         <h3>Next-gen decentralised systems</h3>
         <p class="text-gray-300">
           For example, peer-to-peer web hosting with contents reliably attributed to their
