Refactor TopNav, About, Benefits, Hero, and UseCases components for improved formatting and minor styling

--- a/src/components/Homepage/Benefits.astro
+++ b/src/components/Homepage/Benefits.astro
@@ -1,6 +1,7 @@
 ---
-import checkmarkIcon from '../../assets/icons/checkmark.svg?raw';
+import checkmarkIcon from "../../assets/icons/checkmark.svg?raw";
 ---
+
 <section>
   <div
     class="flex flex-col md:flex-row justify-between items-start gap-16 px-6 py-24 max-w-6xl mx-auto"
@@ -9,7 +10,7 @@ import checkmarkIcon from '../../assets/icons/checkmark.svg?raw';
       <h2 class="text-5xl font-mono font-bold">Key benefits</h2>
       <p class="mt-4">
         Experience the advantages of our decentralized approach that puts security and usability
-        first.
+        first
       </p>
     </div>
 
