--- a/src/components/Homepage/Hero.astro
+++ b/src/components/Homepage/Hero.astro
@@ -4,7 +4,10 @@
   </div>
   <div class="relative max-w-6xl mx-auto text-center">
     <h1 class="text-2xl sm:text-5xl md:text-7xl font-bold md:mb-8 mb-4 leading-tight">
-      <span class="bg-gradient-to-b from-green-500 via-green-400 to-green-300 text-transparent bg-clip-text">User- and developer-friendly</span>
+      <span
+        class="bg-gradient-to-b from-green-500 via-green-400 to-green-300 text-transparent bg-clip-text"
+        >User- and developer-friendly</span
+      >
       <br />
       authentication based on DNS
     </h1>
