--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,7 +20,7 @@ const relaycorpLinks = [
 const currentYear = new Date().getFullYear();
 ---
 
-<footer class="py-16 mx-auto text-sm bg-neutral-900">
+<footer class="py-12 md:py-16 mx-auto text-sm bg-neutral-900">
   <div class="max-w-6xl mx-auto px-6">
     <div class="grid grid-cols-1 md:grid-cols-[1fr_auto_auto] gap-8 md:gap-24">
       <div class="space-y-4">
