--- a/src/components/Homepage/UseCases.astro
+++ b/src/components/Homepage/UseCases.astro
@@ -8,9 +8,9 @@ import offlineAuthentication from "../../assets/offline-authentication.png";
 
 <section class="px-6 sm:py-10 py-8 md:py-16 bg-neutral-950">
   <div class="max-w-6xl mx-auto">
-    <h2 class="text-2xl sm:text-4xl md:text-6xl font-semibold text-center mb-12">Use cases</h2>
+    <h2 class="text-3xl sm:text-4xl md:text-6xl text-center mb-12">Use cases</h2>
     <div
-      class="grid md:grid-cols-2 gap-16 [&>div>h3]:text-lg [&>div>h3]:sm:text-xl [&>div>h3]:md:text-3xl [&>div>h3]:font-semibold [&>div>h3]:mt-4"
+      class="grid md:grid-cols-2 gap-16 [&>div>h3]:text-xl [&>div>h3]:sm:text-xl [&>div>h3]:md:text-3xl [&>div>h3]:font-semibold [&>div>h3]:mt-4"
     >
       <div class="space-y-2">
         <Image src={apiAuthentication} alt="API Authentication icon" class="w-12 h-12" />
