--- a/src/components/Homepage/About.astro
+++ b/src/components/Homepage/About.astro
@@ -1,4 +1,4 @@
-<section class="px-6 py-12 md:py-16 bg-neutral-950">
+<section class="px-6 py-12 md:py-16 bg-neutral-950 text-sm md:text-base">
   <div class="max-w-6xl mx-auto">
     <h2 class="text-3xl sm:text-4xl md:text-6xl text-center mb-8">About</h2>
 
