--- a/src/components/Homepage/Founder.astro
+++ b/src/components/Homepage/Founder.astro
@@ -3,11 +3,11 @@ import { Image } from "astro:assets";
 import founderPortrait from "../../assets/founder-portrait.png";
 ---
 
-<section class="px-6 py-12 md:py-16">
+<section class="px-6 py-12 md:py-16 text-sm md:text-base">
   <div class="max-w-6xl mx-auto">
     <h2 class="text-3xl sm:text-4xl md:text-6xl text-center mb-8">Founder's note</h2>
 
-    <div class="flex flex-col md:flex-row gap-16 items-center">
+    <div class="flex flex-col md:flex-row md:gap-16 gap-8 items-center">
       <div class="w-full overflow-hidden">
         <Image src={founderPortrait} alt="" class="w-full h-full object-cover" />
       </div>
